# django-practice

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  render.yaml  render.yml  requirements.txt
.github/workflows/: ci.yml
apps/shop/: tests.py  views.py
apps/shop/migrations/: 0003_rename_available_product_is_active_and_more.py  0004_product_image.py  0005_order_total_price.py  0006_product_price_not_negative_and_more.py
apps/shop/templates/: base.html
apps/shop/templates/registration/: login.html
apps/shop/templates/shop/: checkout.html  complete.html
apps/shop/templates/shop/partials/: cart_details.html  messages.html
myproject/: asgi.py  auth_views.py  settings.py  urls.py  wsgi.py
myproject/settings/: base.py  local.py  prod.py
shop/: admin.py  context_processors.py  models.py  services.py  tests.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_alter_product_options_product_available_and_more.py  0003_productimage.py  0003_rename_available_product_is_active_and_more.py
shop/templates/: base.html
shop/templates/shop/: checkout.html  order_history.html  product_detail.html  product_list.html
shop/templates/shop/partials/: cart_counter.html  cart_details.html  messages.html  product_grid.html  product_image.html
