[project]
name = "django-practice"
version = "0.1.0"
description = "Portfolio EC site built with Django, HTMX, and Pico CSS"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "cloudinary>=1.44.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-cloudinary-storage>=0.3.0",
    "django-environ>=0.13.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.54.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.2",
    "safety>=3.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "I", "B"]
exclude = ["**/migrations/*.py"]
extend-exclude = ["*.html"]

[tool.ruff.lint.isort]
known-first-party = ["apps"]

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "myproject.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "myproject.settings.base"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "myproject.settings.base"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers --no-migrations --reuse-db"
